# serial-experiments

./: .ccls  README.md  backup  compile_commands.json  lsp.sh  main.c  makefile
asm/: README.md  readme
asm/max/: Makefile  main.s
asm/meow/: Makefile  main  main.s
asm/outline/: Makefile  main  main.s
asm/unixcall/: Makefile  main.s
bios/printing/: Makefile  README  boot  boot.S
cpp/: README.md
cpp/graphics/: README.md  blank_window.cpp  simple_graph.cpp  simple_window.cpp
cpp/graphics/libgraph/: GUI.cpp  GUI.h  Graph.h  Window.h
cpp/simple_window/: CMakeLists.txt  example_one.cpp
cpp/simple_window/libgraph/: Graph.cpp  Graph.h  Point.h  README.md  Simple_window.h  fltk.h
cpp/tokens/: Makefile  README  main  main.cpp  token.hpp
graphics/fltk/: CMakeLists.txt  README.txt
graphics/fltk/box_sample/: main.cpp
graphics/fltk/cairo_window/: CMakeLists.txt  main.cpp
graphics/fltk/cairo_window/something/: mainsome.hpp  something.cpp  something.hpp
graphics/fltk/simple_window/: CMakeLists.txt  compile_commands.json  main.cpp
graphics/sdl/first/: Makefile  README  main  main.c
image/: Makefile  README  linker.ld  linker.ld~  main.s
javascript/: README
javascript/grammar/: main.js
javascript/hello/: main.html  main.js
kernel/: README  boot.S  kernel.c
leetcode/: 1.two_sum.cpp  README
pipes/: main.c
pipes/first/: Makefile  main
pipes/nonblocking/: Makefile  main  main.c  output
pipes/second/: Makefile  main  main.c
uefi/: README  main.c  uefi.img
uefi/asm/unixcall/: readme
vec/: main  main.c  vec.h
web/: README
web/htmlstruct/basic/: index.html
